[gd_scene load_steps=3 format=3 uid="uid://1v76j3t52gdp"]

[ext_resource type="Script" uid="uid://bdivaq32uc6dp" path="res://home.gd" id="1_1ey7h"]
[ext_resource type="Texture2D" uid="uid://bxkdtofujphu3" path="res://icon.svg" id="3_o1ld7"]

[node name="Home" type="Node2D"]
script = ExtResource("1_1ey7h")

[node name="Snowman Button" type="TextureButton" parent="."]
offset_left = 1548.0
offset_top = 169.0
offset_right = 1713.0
offset_bottom = 315.0
texture_normal = ExtResource("3_o1ld7")

[node name="Pond Button" type="TextureButton" parent="."]
offset_left = 1347.0
offset_top = 823.0
offset_right = 1475.0
offset_bottom = 951.0
texture_normal = ExtResource("3_o1ld7")

[node name="Fireplace" type="TextureButton" parent="."]
offset_left = 664.0
offset_top = 167.0
offset_right = 792.0
offset_bottom = 309.0
texture_normal = ExtResource("3_o1ld7")

[node name="Kitchen" type="TextureButton" parent="."]
offset_left = 448.0
offset_top = 570.0
offset_right = 576.0
offset_bottom = 701.0
texture_normal = ExtResource("3_o1ld7")

[node name="Penguin1" type="Sprite2D" parent="."]
position = Vector2(863, 501)
texture = ExtResource("3_o1ld7")

[node name="Penguin2" type="Sprite2D" parent="."]
position = Vector2(1055, 501)
texture = ExtResource("3_o1ld7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(961, 539)

[connection signal="pressed" from="Snowman Button" to="." method="_on_snowman_button_pressed"]
[connection signal="pressed" from="Pond Button" to="." method="_on_pond_button_pressed"]
[connection signal="pressed" from="Fireplace" to="." method="_on_fireplace_pressed"]
[connection signal="pressed" from="Kitchen" to="." method="_on_kitchen_pressed"]
